# python-project-lvl3

./: .gitignore  Makefile  README.md  logger.conf  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
page_loader/: Progress.py  __init__.py  download.py  file_paths.py  file_saver.py  loader.py  logger.py  name_converter.py  parser.py
page_loader/scripts/: download.py
tests/: conftest.py  file_loader.py
tests/fixtures/: file_with_image_links1.html
tests/page_loader/: test_download.py  test_loader.py  test_name_converter.py  test_parser.py
